--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <div class="dot"></div>
     </div>
 
+    <div class="video-section">
+      <div class="video">
+        <video src="video/video01.mp4" autoplay loop muted></video>
+      </div>
+    </div>
+
     <header id="header" class="">
       <div>
         <img src="img/scroll_01/header/header_scroll.png" alt="" />
@@ -41,6 +47,7 @@
           <img src="img/menu/header02.png" alt="" />
         </div>
       </div>
+
       <div class="subtitle">
         <img src="img/menu/subtitle.png" alt="" />
       </div>
@@ -102,6 +109,7 @@
           </div>
         </div>
       </div>
+
       <div class="side">
         <div class="star">
           <div>
@@ -126,25 +134,162 @@
           </div>
         </div>
       </div>
+
+      <div class="underbar"><img src="img/menu/underbar.png" alt="" /></div>
     </div>
 
-    <div class="video-section">
-      <div class="video">
-        <video src="video/video01.mp4" autoplay loop muted></video>
-      </div>
-    </div>
+    <!-- Main Sections -->
+    <section class="container">
+      <section id="section01">
+        <div class="trigger-this-1">
+          <div class="fix-this-1">
+            <div class="main_title main_title_01">
+              <h1>hello world</h1>
+            </div>
+            <div class="main_title main_title_02">
+              <h1>gsap project title</h1>
+            </div>
+            <div class="main_title main_title_03">
+              <h1>center text effect</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="section02">
+        <div class="trigger-this-we">
+          <div class="we">
+            <img src="img/scroll_01/section02/we.png" alt="" />
+          </div>
+        </div>
+
+        <div class="trigger-this-2">
+          <div class="fix-this-2">
+            <div class="left">
+              <div class="star01">
+                <img src="img/scroll_01/etc/01_star.png" alt="" />
+              </div>
+              <div class="star02">
+                <img src="img/scroll_01/etc/01_star.png" alt="" />
+              </div>
+              <div><img src="img/scroll_01/section02/dot.png" alt="" /></div>
+            </div>
+
+            <div class="star03">
+              <img src="img/scroll_01/etc/01_star.png" alt="" />
+            </div>
+
+            <div class="title">
+              <div class="create">
+                <img src="img/scroll_01/section02/create.png" alt="" />
+              </div>
+              <div class="title02">
+                <div class="design">
+                  <img src="img/scroll_01/section02/design.png" alt="" />
+                </div>
+                <div class="subtitle">
+                  <img src="img/scroll_01/section02/subtxt.png" alt="" />
+                </div>
+              </div>
+              <div class="connect">
+                <img src="img/scroll_01/section02/connect.png" alt="" />
+              </div>
+            </div>
+
+            <div class="back">
+              <div class="bigtxt">
+                <div class="big01">
+                  <div class="al_s">
+                    <img src="img/scroll_01/section02/since1989_s.png" alt="" />
+                  </div>
+                  <div class="al_i">
+                    <img src="img/scroll_01/section02/since1989_i.png" alt="" />
+                  </div>
+                  <div class="al_n">
+                    <img src="img/scroll_01/section02/since1989_n.png" alt="" />
+                  </div>
+                  <div class="al_c">
+                    <img src="img/scroll_01/section02/since1989_c.png" alt="" />
+                  </div>
+                  <div class="al_e">
+                    <img src="img/scroll_01/section02/since1989_e.png" alt="" />
+                  </div>
+                </div>
+
+                <div class="big02">
+                  <div class="no_1">
+                    <img src="img/scroll_01/section02/since1989_1.png" alt="" />
+                  </div>
+                  <div class="no_9">
+                    <img src="img/scroll_01/section02/since1989_9.png" alt="" />
+                  </div>
+                  <div class="no_8">
+                    <img src="img/scroll_01/section02/since1989_8.png" alt="" />
+                  </div>
+                  <div class="no_12">
+                    <img src="img/scroll_01/section02/since1989_1.png" alt="" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="underline">
+                <img src="img/scroll_01/section02/underline.png" alt="" />
+              </div>
+            </div>
+
+            <div class="keyboard">
+              <img src="img/scroll_01/section02/keyboard.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="section03" class="">
+        <div class="visual_container">
+          <div class="title">
+            <div class="title02">
+              <div class="logitech">
+                <img src="img/scroll_01/section03/logitech.png" alt="" />
+              </div>
+              <div class="keep">
+                <img src="img/scroll_01/section03/title01.png" alt="" />
+              </div>
+            </div>
+
+            <div class="design03">
+              <img src="img/scroll_01/section03/title02.png" alt="" />
+            </div>
+            <div class="box"></div>
+            <div class="center">
+              <img src="/img/scroll_01/section03/title03.png" alt="" />
+            </div>
+            <div class="of">
+              <img src="img/scroll_01/section03/title04.png" alt="" />
+            </div>
+
+            <div class="subtxt">
+              <img src="img/scroll_01/section03/subtxt.png" alt="" />
+            </div>
+          </div>
+
+          <div class="longtext">
+            <img src="img/scroll_01/section03/longtxt.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </section>
 
     <script>
-      let scene = document.getElementById('menu');
-      let parallax = new Parallax(scene);
+      var scene = document.getElementById('menu');
+      var parallax = new Parallax(scene);
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <!-- <script src="js/plugin/gsap.js"></script>
     <script src="js/plugin/scrollTrigger.js"></script> -->
-    <script src="js/scrollbar.js"></script>
-    <script src="js/setting.js"></script>
+    <!-- <script src="js/scrollbar.js"></script> -->
+    <!-- <script src="js/setting.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
